Added the header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <div class="container">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +14,15 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <h1>Welcome to London</h1>
+    <div class="container">
+    <header>
+      <h3>.TRAVEL.</h3>
+      <h1>Welcome to South East London</h1>
+      <h2>Areas to explore</h2>
+     <button>
+      <a href="">Learn more</a>
+     </button> 
+    </header>
+  </div>
   </body>
 </html>
