Added the footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
       <a href="">Learn more</a>
      </button> 
     </header>
-  </div>
+  
+  <footer>
+    <section class="grid">
+    <div>
+      <h3>More about South East London</h3>
+      <ul>
+        <li><a href="https://www.cityoflondon.gov.uk/things-to-do" target="_blank">City of London website</a></li>
+        <li><a href="https://www.visitlondon.com/-/media/files/london/visit/maps-and-guides/tube-maps/tube-map-2024.pdf?rev=cc366fcda0974c6cb81d633b6069c2ee" target="_blank">Tube map of London</a></li>
+      </ul>
+    </div>
+    <div>
+      <h3>About me</h3>
+      <p>Hello! I am Carolina and I've moved to London - more specifically South East London - in November 2024. I created this page as a project of SheCodes Responsive workshop</p>
+    </div>
+    <div><h3>About this website</h3>
+    <p>This project was coded with ❤️ by Carolina Terra and it is on <a href="https://github.com/carolinastilwell/travel-project">GitHub</a></p></div>
+  </section>
+  </footer>
+</div>
   </body>
 </html>
