--- a/index.html
+++ b/index.html
@@ -23,9 +23,20 @@
       <a href="">Learn more</a>
      </button> 
     </header>
-  
+  <main>
+    <section class="grid grid2">
+      <div>
+      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjrF4RenMrnocB24VN_4s5Nr6dzQCxHnEQNWgv8RMxrPCXaStdgXzasjRu6z_zZICrWNijoxEFWAM9nSf9cwBPKLDwgSBPzyhvLPmyzyGseGJsnniGw5njDdRpGN_A0FhKQSMm5n0WrsaFR/w1200-h630-p-k-no-nu/P301207_15.04.jpg" class="img-park"
+       alt="Telegraph Hill Park">
+    </div>
+    <div>
+      <h3>Why SE?</h3>
+      <p>South East London is where the city feels most like home to me. It's full of character—quiet parks with skyline views, cozy cafés where the baristas know your name, and pubs that feel like old friends. Away from the typical tourist spots, this part of London has a charm that's more local, more laid-back, and always a little unexpected. These are the places I go to relax, recharge, and enjoy the everyday magic of city life.</p>
+    </div>
+    </section>
+  </main>
   <footer>
-    <section class="grid">
+    <div class="grid grid3">
     <div>
       <h3>More about South East London</h3>
       <ul>
@@ -39,7 +50,7 @@
     </div>
     <div><h3>About this website</h3>
     <p>This project was coded with ❤️ by Carolina Terra and it is on <a href="https://github.com/carolinastilwell/travel-project">GitHub</a></p></div>
-  </section>
+    </div>
   </footer>
 </div>
   </body>
