--- a/index.html
+++ b/index.html
@@ -19,24 +19,59 @@
       <h3>.TRAVEL.</h3>
       <h1>Welcome to South East London</h1>
       <h2>Areas to explore</h2>
-     <button>
       <a href="">Learn more</a>
-     </button> 
-    </header>
+     </header>
   <main>
-    <section class="grid grid2">
+    <section class="grid grid2 primary">
       <div>
       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjrF4RenMrnocB24VN_4s5Nr6dzQCxHnEQNWgv8RMxrPCXaStdgXzasjRu6z_zZICrWNijoxEFWAM9nSf9cwBPKLDwgSBPzyhvLPmyzyGseGJsnniGw5njDdRpGN_A0FhKQSMm5n0WrsaFR/w1200-h630-p-k-no-nu/P301207_15.04.jpg" class="img-park"
        alt="Telegraph Hill Park">
     </div>
     <div>
-      <h3>Why SE?</h3>
-      <p>South East London is where the city feels most like home to me. It's full of character—quiet parks with skyline views, cozy cafés where the baristas know your name, and pubs that feel like old friends. Away from the typical tourist spots, this part of London has a charm that's more local, more laid-back, and always a little unexpected. These are the places I go to relax, recharge, and enjoy the everyday magic of city life.</p>
+      <h2>Why South East?</h2>
+      <h3>Hilltops and Hidden Cafés</h3>
+      <p>South East London is where the city feels most like home to me. It's full of character—quiet parks with skyline views, cozy cafés where the baristas know your name, and pubs that feel like old friends. <br>Away from the typical tourist spots, this part of London has a charm that's more local, more laid-back, and always a little unexpected. These are the places I go to relax, recharge, and enjoy the everyday magic of city life.</p>
     </div>
+    </section>
+    <section class="secondary">
+      <h2 class="text-center">CAFES</h2>
+      <h3 class="text-center">My favourite cafes</h3>
+      <div class="grid grid3">
+        <div class="card">
+          <img src="images/hillstation.jpg" alt="" class="img-responsive img-hillstation">
+          <h4>The Hill Station Café</h4>
+          <p>A friendly neighbourhood café tucked between Telegraph Hill's upper and lower parks, serving homemade cakes, brunch, and great coffee in a cozy, community-driven space.</p>
+          <h5>Address</h5>
+          <p>The Hill Station, Kitto Rd, London SE14 5TW, United Kingdom</p>
+          <h5>What I like about it</h5>
+          <p>It's the perfect stop after a walk in the park. The vibe is always warm and relaxed, and I love how it brings locals together over coffee and conversation.</p>
+          <a href="https://hillstationcafe.co.uk/" target="_blank" class="btn">Learn more</a>
+        </div>
+        <div class="card">
+          <img src="images/mosey.jpg" alt="" class="img-responsive img-hillstation">
+          <h4>Mosey</h4>
+          <p>A beautifully designed café with calm interiors, seasonal bakes, and excellent coffee—ideal for slow mornings or peaceful afternoons.</p>
+          <h5>Address</h5>
+          <p>60 Nunhead Ln, London SE15 3QE, United Kingdom</p>
+          <h5>What I like about it</h5>
+          <p>Mosey feels like a little retreat in the middle of Nunhead. Their pastries are top-tier, and the minimalist decor makes you want to stay a while.</p>
+          <a href="https://www.moseycafe.co.uk/" target="_blank" class="btn">Learn more</a>
+        </div>
+        <div class="card">
+          <img src="images/Cafe G.png" alt="" class="img-responsive img-hillstation">
+          <h4>Café G.</h4>
+          <p>A welcoming spot right by Peckham Rye Park, serving specialty coffee, hearty sandwiches, and sweet treats with a smile.</p>
+          <h5>Address</h5>
+          <p>184 Peckham Rye, London SE22 9QA, United Kingdom</p>
+          <h5>What I like about it</h5>
+          <p>It's my go-to after a walk in the park. The staff are lovely, and it’s always buzzing with locals, dogs, and good energy.</p>
+          <a href="https://www.cafe-g.com/" target="_blank" class="btn">Learn more</a>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
-    <div class="grid grid3">
+    <div class="grid grid-footer">
     <div>
       <h3>More about South East London</h3>
       <ul>
