--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <p>Hello! I am Carolina and I've moved to London - more specifically South East London - in November 2024. I created this page as a project of SheCodes Responsive workshop</p>
     </div>
     <div><h3>About this website</h3>
-    <p>This project was coded with ❤️ by Carolina Terra and it is on <a href="https://github.com/carolinastilwell/travel-project">GitHub</a></p></div>
+    <p>This project was coded with ❤️ by Carolina Terra and it is on <a href="https://github.com/carolinastilwell/travel-project" target="_blank">GitHub</a></p></div>
     </div>
   </footer>
 </div>
