Made the maps responsive

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <br>
       <div class="grid grid3">
         <div class="card">
+          <div>
           <img src="images/hillstation.jpg" alt="" class="img-responsive img-hillstation">
           <h4>The Hill Station Café</h4>
           <p>A friendly neighbourhood café tucked between Telegraph Hill's upper and lower parks, serving homemade cakes, brunch, and great coffee in a cozy, community-driven space.</p>
@@ -49,6 +50,7 @@
           <p>It's the perfect stop after a walk in the park. The vibe is always warm and relaxed, and I love how it brings locals together over coffee and conversation.</p>
           <a href="https://hillstationcafe.co.uk/" target="_blank" class="btn">Learn more</a>
         </div>
+      </div>
         <div class="card">
           <img src="images/mosey.jpg" alt="" class="img-responsive img-hillstation">
           <h4>Mosey</h4>
